fixed pic in readme

--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Version 1.0 July 17, 2012
 
 Base bones. Got it kinda working. Code is a mess. I will be back :)
 
-![Screenshot1](http://assets3.pinimg.com/upload/287315651198126405_mOHgHeCU.jpg)
+![Alt text](http://assets3.pinimg.com/upload/287315651198126405_mOHgHeCU.jpg)
 
 ------------------------------
 
